<resources>
    <string name="app_name">Senior Care</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="birthdate">Birthdate</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="contacts">Contacts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="seniors">Seniors</string>
    <string name="update_password">Update Password</string>
    <string name="name">Name</string>
    <string name="senior_care" translatable="false">Senior Care</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_to_schedule">Add to Schedule</string>
    <string name="new_event">New Event</string>
    <string name="submit">Submit</string>
    <string name="name_senior">Name:</string>
    <string name="age_senior">Age:</string>
    <string name="year">YEAR</string>
    <string name="send_notification">Send Notification</string>
    <string name="information">Information</string>
    <string name="schedule">Schedule</string>
    <string name="no_data_to_show">NO DATA TO SHOW</string>
    <string name="content">Content</string>
    <string name="user">USER</string>
    <string name="doctor">DOCTOR</string>
    <string name="who_are_you">Who are you?</string>
    <string name="logout">Logout</string>
    <string name="senior_details">Senior Details</string>
    <string name="profile">Profile</string>
    <string name="empty_categories">No categories were added, add the categories you need.</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_alert_dialog">Are you sure you want to delete this category?</string>
    <string name="medicine_alert_dialog">Are you sure you want to delete this medicine?</string>
    <string name="schedule_alert_dialog">Are you sure you want to delete this appointment?</string>
    <string name="logout_alert_dialog">Are you sure you want to logout?</string>
    <string name="delete_senior_alert_dialog">Are you sure you want to delete this senior?</string>
    <string name="no_description">No Description.</string>
    <string name="empty_details">No details were added, add the details you need.</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_all_data">Enter all data</string>
    <string name="bookings">Bookings</string>
    <string name="you_do_not_have_bookings">You do not have bookings.</string>
    <string name="bookings_alert_dialog">Are you sure to delete this booking?</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_text">Enter text</string>
    <string name="check">Check</string>
    <string name="medicines">Medicines</string>
    <string name="chats">Chats</string>
    <string name="SENIOR" translatable="false">SENIOR</string>
    <string name="search">Search</string>
    <string name="times_a_day">times a day</string>
</resources>